Fixed GetAllTasks and remove minor data returns
