# openapi/openapi.yaml
@@ -195,22 +195,10 @@ components:
           type: string
         password:
           type: string
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
-        deleted_at:
-          type: string
-          format: date-time
-          nullable: true
       required:
         - id
         - email
         - password
-        - created_at
-        - updated_at
     UserRequest:
       type: object
       properties:
